@@ -70,7 +70,8 @@
 # Some display libraries now support specific options to control their
 # behaviour. These options are supported by more than one display library:
 #
-# "cmdmode"     - call a headerbar button handler after pressing F7 (x, sdl, sdl2)
+# "cmdmode"     - call a headerbar button handler after pressing F7 (sdl, sdl2,
+#                 win32, x)
 # "fullscreen"  - startup in fullscreen mode (sdl, sdl2)
 # "gui_debug"   - use GTK debugger gui (sdl, sdl2, x) / Win32 debugger gui (sdl,
 #                 sdl2, win32)
